--- a/example/pivoton.css
+++ b/example/pivoton.css
@@ -32,6 +32,12 @@
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0);
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .pivoton-overlay:active,
 .pivoton-overlay:hover {
